--- a/calculadora.html
+++ b/calculadora.html
@@ -13,7 +13,7 @@
 <script>
 	  var num1=prompt("Introduce el primer numero");
     var num2=prompt("Introduce el segundo numero");
-    var operacion=prompt("Que operacion deseas realizar? Suma, Resta, Multiplicacion, Division").toLowerCase;
+    var operacion=prompt("Que operacion deseas realizar? Suma, Resta, Multiplicacion, Division").toLowerCase();
 
     if (operacion=="suma"){
       alert(parseInt(num1)+parseInt(num2));
